--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,12 @@
 
 @font-face {
   font-family: 'Inter';
+  src: url('/fonts/Inter-Regular.woff2') format('woff2');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter';
   font-weight: 400;
   src: url('/assets/fonts/Inter-Regular.ttf') format('truetype');
   font-display: swap;
